popup arrange viewing partly

--- a/app/blocks/link/link.scss
+++ b/app/blocks/link/link.scss
@@ -141,6 +141,11 @@
       height: 15px;
     }
 
+    &_calendar2 {
+      width: 14px;
+      height: 14px;
+    }
+
     #{$b}_no-shadow & {
       filter: none;
     }
