--- a/app/blocks/offer-item/offer-item.pug
+++ b/app/blocks/offer-item/offer-item.pug
@@ -17,5 +17,5 @@ mixin offer-item(data)
               li Silent time from 10pm till 8am
               li First and last months for offices are paid before letting start
         +e.buttons
-          +button('a')._thin-border._thin-border_smaller._smaller._wide.__button Arrange a viewing
-          +button('a')._smaller._wide.__button Request Reservation
+          +button('a')(href="#popup-arrange-viewing")._thin-border._thin-border_smaller._smaller._wide.__button.js-popup Arrange a viewing
+          +button('a')._smaller._wide.__button(href="#") Request Reservation
