--- a/app/components/popup-add-offer/popup-add-offer.scss
+++ b/app/components/popup-add-offer/popup-add-offer.scss
@@ -5,6 +5,13 @@
   width: 100%;
   max-width: 788px;
 
+  .popup {
+
+    &__content {
+      padding-bottom: 95px;
+    }
+  }
+
   &__tabs {
     position: relative;
 
