--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -14,6 +14,7 @@ include ../blocks/bubble/bubble
 include ../blocks/burger/burger
 include ../blocks/button-heart/button-heart
 include ../blocks/button/button
+include ../blocks/calendar/calendar
 include ../blocks/card-mask/card-mask
 include ../blocks/category-filter/category-filter
 include ../blocks/characteristics-table/characteristics-table
@@ -78,6 +79,7 @@ include ../blocks/request-status/request-status
 include ../blocks/request/request
 include ../blocks/scroll-form/scroll-form
 include ../blocks/section/section
+include ../blocks/selectable-block/selectable-block
 include ../blocks/short-profile/short-profile
 include ../blocks/sidebar/sidebar
 include ../blocks/slider/slider
@@ -117,6 +119,7 @@ include ../components/offer-short/offer-short
 include ../components/page-header/page-header
 include ../components/pivot-table/pivot-table
 include ../components/popup-add-offer/popup-add-offer
+include ../components/popup-arrange-viewing/popup-arrange-viewing
 include ../components/popup-signin/popup-signin
 include ../components/side-navigation/side-navigation
 include ../components/space-info/space-info
