--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -31,9 +31,11 @@ block content
       +e.list
         +link(href="#popup-signin").js-popup Popup Sign In
         +link(href="#popup-add-rental-offer").js-popup Popup Add rental offer
+        //- +link(href="#popup-arrange-viewing").js-popup Popup Arrange Viewing
 
 block panels
   +main-menu
 
 block popups
   +popup-add-offer#popup-add-rental-offer
+  +popup-arrange-viewing#popup-arrange-viewing
