--- a/app/blocks/form-elements/form-elements.scss
+++ b/app/blocks/form-elements/form-elements.scss
@@ -767,9 +767,9 @@
 
   &__inner {
     @extend .select;
-    @include text16;
+    @include text-mid;
 
-    line-height: (28/16);
+    line-height: (26/17);
     font-weight: 700;
     color: $color-basic;
     transition: all $ease-main;
@@ -840,6 +840,10 @@
 
       #{$k}.is-open-right & {
         right: 0;
+      }
+
+      .popup & {
+        background-color: $color-white;
       }
     }
   }
