--- a/app/pages/space/space.pug
+++ b/app/pages/space/space.pug
@@ -217,3 +217,6 @@ block content
 block panels
   +main-menu
   +offer-panel.hide-from-md
+
+block popups
+  +popup-arrange-viewing#popup-arrange-viewing
