--- a/app/blocks/popups/popups.scss
+++ b/app/blocks/popups/popups.scss
@@ -37,7 +37,7 @@
   width: 100%;
   max-width: 788px;
   padding: 0;
-  overflow: hidden;
+  overflow: visible;
 
   &__wrapper {
     display: block;
