--- a/app/components/popup-add-offer/popup-add-offer.pug
+++ b/app/components/popup-add-offer/popup-add-offer.pug
@@ -44,9 +44,9 @@ mixin popup-add-offer()
                   +form-box('').__mesure
                     +select.js-select-input(name="mesuresPeriodMin")
                       option(value="Days" selected) Days
-                      option(value="Week") Week
-                      option(value="Month") Month
-                      option(value="Year") Year
+                      option(value="Week") Weeks
+                      option(value="Month") Months
+                      option(value="Year") Years
               +col({xl: 6, sm: 12})
                 +form-section-wrapper._negative-mg
                   +form-box('Maximum rent period').__count
