--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -31,7 +31,7 @@ block content
       +e.list
         +link(href="#popup-signin").js-popup Popup Sign In
         +link(href="#popup-add-rental-offer").js-popup Popup Add rental offer
-        //- +link(href="#popup-arrange-viewing").js-popup Popup Arrange Viewing
+        +link(href="#popup-arrange-viewing").js-popup Popup Arrange Viewing
 
 block panels
   +main-menu
