--- a/app/blocks/form-elements/form-elements.scss
+++ b/app/blocks/form-elements/form-elements.scss
@@ -812,7 +812,7 @@
       background-color: $color-bg;
       border-top: 1px solid $color-basic;
       border-bottom: 1px solid $color-basic;
-      width: 290px;
+      width: 100px;
       max-height: 100px;
       transition: all $ease-main;
 
@@ -832,6 +832,10 @@
             color: $color-white;
           }
         }
+      }
+
+      #{$k}__list {
+        overflow: visible;
       }
 
       #{$k}__placeholder {
