--- a/app/components/footer/footer.pug
+++ b/app/components/footer/footer.pug
@@ -18,3 +18,11 @@ mixin footer()
       +e.bottom
         +e.copyright.hide-from-sm &copy; Space Pool ltd. 2019
         +e.text The Space Pool Service operates under the United Kingdom Urisdiction. This text have no&nbsp;any sense it&rsquo;s just some sort of&nbsp;dummie to&nbsp;show the place where we&nbsp;can put an&nbsp;information usually writen with small letters.
+
+
+mixin footer-special()
+  +b.FOOTER.footer&attributes(attributes)
+    .container
+      +e.top
+        +e.logo
+          +logo-image._footer
