--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -26,6 +26,8 @@ block content
         +link(href="signup.html") Sign Up (signup.html)
         +link(href="signup-verification-message.html") Sign Up verification message (signup-verification-message.html)
         +link(href="host-signup-verification-message.html") Sign Up verification message (for host) (host-signup-verification-message.html)
+        //- +link(href="about-tenant.html") About Space Pool for Guests (about-tenant.html)
+        //- +link(href="about-host.html") About Space Pool for Hosts (about-host.html)
 
       +page-title._small Попапы
       +e.list
