--- a/app/blocks/form/form.scss
+++ b/app/blocks/form/form.scss
@@ -135,11 +135,27 @@
       }
     }
 
+    &_mg35 {
+      margin-bottom: 35px;
+
+      @include screen('sm') {
+        margin-bottom: 56px;
+      }
+    }
+
     &_mg46 {
       margin-bottom: 46px;
 
       @include screen('sm') {
         margin-bottom: 56px;
+      }
+    }
+
+    &_mg49 {
+      margin-bottom: 49px;
+
+      @include screen('sm') {
+        margin-bottom: 60px;
       }
     }
 
@@ -495,6 +511,43 @@
 
   &__checker {
     margin-bottom: 24px;
+
+    &_mgt-20 {
+      margin-top: -20px;
+    }
+  }
+
+  &__toggles {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    margin-top: -5px;
+
+    &:not(:last-child) {
+      margin-bottom: 45px;
+    }
+
+    @include screen('xs') {
+      justify-content: center;
+    }
+  }
+
+  &__toggle {
+    margin-top: 5px;
+
+    &:not(:last-child) {
+      margin-right: 17px;
+
+      @include screen('sm') {
+        margin-right: 10px;
+      }
+
+      @include screen('xs') {
+        margin-right: 5px;
+        margin-left: 5px;
+      }
+    }
   }
 
   &_pb {
