--- a/app/pages/ui-kit/ui-kit.pug
+++ b/app/pages/ui-kit/ui-kit.pug
@@ -553,6 +553,12 @@ block content
               +col(2)
                 +ui-description .color-radio._full
                 +color-radio('test-color2', '5')._full._dark Office Space
+              +col(2)
+                +ui-description .color-radio._full._big
+                +color-radio('test-color2', '6')._full._dark._big Office Space
+              +col(2)
+                +ui-description .color-radio._green._big
+                +color-radio('test-color2', '7')._green._dark._big Office Space
 
     //-Табы
     +ui-section
