--- a/app/pages/signup/signup.pug
+++ b/app/pages/signup/signup.pug
@@ -13,189 +13,106 @@ block content
               +e.H1.title Sign Up
               +note._color._color_green._lh26.__note Create your own Space Pool account. Get full access to letting options or become a host and create your own offers on Space pool.
         +col({ xl: 8, lg: 12})
-          +tabs
-            +tab-container()(data-tab-target="tab1").active Sign up as a tenant
-            +tab-container()(data-tab-target="tab2") Sign up as a host
-          +tabs-content.tabs-content_mg
-            +tab-wrapper()(data-tab="tab1" data-tab-group="signup").active
-              +form()(data-validated-form)
-                +form-section('section')._socials
-                  +form-section-header._mg14
-                    +form-section-text Choose one of automatic options using social media:
-                  +grid.grid_layout.grid_int10
-                    +col({xl: 6, sm: 12})
-                      +social-button('fb-symbol')._fb._white(href="#") Sign up with Facebook
-                    +col({xl: 6, sm: 12})
-                      +social-button('', 'assets/images/google.svg')._gg._white(href="#") Sign up with Google Account
-                +divider('div')._text.__divider
-                  +e.text OR
-                +form-section._sm-mg
-                  +form-section-header._mg46
-                    +form-section-text Fill the form Below. Provide us All necessary information about you and you so We can create unique account for you.
-                  +grid.grid_big
-                    +col({xl: 6, md:12 })
-                      +form-section-wrapper
-                        +form-box('First name')
-                          +input(type="text" name="firstName" value="Eugene" placeholder="First name" required="required")
-                    +col({xl: 6, md:12 })
-                      +form-section-wrapper
-                        +form-box('Last name')
-                          +input(type="text" name="lastName" value="Sheeleen" placeholder="Last name" required="required")
-                +form-section._mg75
-                  +form-section-checker
-                    +b.LABEL.checkbox
-                      +e.INPUT.input(name="isCompaty" value="1" type="checkbox" data-checker="details")
-                      +e.SPAN.box
-                        +icon('check').__icon
-                      +e.SPAN.content I work under brand or company
-                  +form-section-content.is-disabled(data-checker-target="details")
-                    +form-section-header._mg30
-                      +form-section-title Company details:
-                    +grid.grid_big
-                      +col({xl: 6, md:12 })
-                        +form-section-wrapper
-                          +form-box('Company name')
-                            +input(type="text" name="companyName" placeholder="Company name" required="required")
-                      +col({xl: 6, md:12 })
-                        +form-section-wrapper
-                          +form-box('Company Registry No.')
-                            +input(type="text" name="companyRegN" placeholder="Company Registry No." required="required")
-                      +col({xl: 6, md:12 })
-                        +form-section-wrapper
-                          +form-box('VAT number if you have it')
-                            +input(type="text" name="VATnumber" placeholder="VAT number if you have it")
-                      +col({xl: 6, md:12 })
-                        +form-section-wrapper
-                          +form-box('Legal adress city')
-                            +input(type="text" name="legalAdressCity" placeholder="Legal adress city" required="required")
-                      +col({xl: 6, md:12 })
-                        +form-section-wrapper
-                          +form-box('Legal adress street')
-                            +input(type="text" name="legalAdressStreet" placeholder="Legal adress street" required="required")
-                      +col({xl: 6, md:12 })
-                        +form-section-wrapper
-                          +form-box('Building No.')
-                            +input(type="text" name="buildingN" placeholder="Building No." required="required")
-                      +col({xl: 6, md:12 })
-                        +form-section-wrapper
-                          +form-box('Apartment or Office No.')
-                            +input(type="text" name="officeN" placeholder="Apartment or Office No.")
-                      +col({xl: 6, md:12 })
-                        +form-section-wrapper
-                          +form-box('ZIP/Postal Code')
-                            +input(type="text" name="ZIPcode" placeholder="ZIP/Postal Code" required="required")
-                +form-section
-                  +form-section-header._mg30
-                    +form-section-title Registration info:
-                  +grid.grid_big.grid_inner
-                    +col({xl: 6, md:12 })
-                      +form-section-wrapper
-                        +form-box('E-mail adress')
-                          +input(type="email" name="email" placeholder="E-mail adress" required="required")
-                    +col({xl: 6, md:12 }).grid__col_md-order2
-                      +form-section-wrapper
-                        +checkbox('agreement', '1')._border I agree with Terms and Conditions
-                    +col({xl: 6, md:12 })
-                      +form-section-wrapper
-                        +form-box('Password')
-                          +input(type="password" name="password" placeholder="Password"
-                          data-parsley-equalto="[data-password2]" data-password1="password1" required="required")
-                    +col({xl: 6, md:12 }).grid__col_md-order2
-                      +form-section-wrapper
-                        +checkbox('subscribe', '1')._border Sign me up to Space Pool notification via E-mail
-                    +col({xl: 6, md:12 })
-                      +form-section-wrapper
-                        +form-box('Password one more time')
-                          +input(type="password" name="password" placeholder="Password one more time" data-password2="password2"
-                          data-parsley-equalto="[data-password1]" required="required")
-                    +col({xl: 6, md:12 }).grid__col_md-order2
-                      +form-section-wrapper
-                        +button('button')(type="submit")._wide._short Create my Space Pool account
-            +tab-wrapper()(data-tab="tab2" data-tab-group="signup")
-              +form()(data-validated-form)
-                +form-section('section')._socials
-                  +form-section-header._mg14
-                    +form-section-text Choose one of automatic options using social media:
-                  +grid.grid_layout.grid_int10
-                    +col({xl: 6, sm: 12})
-                      +social-button('fb-symbol')._fb._white(href="#") Sign up with Facebook
-                    +col({xl: 6, sm: 12})
-                      +social-button('', 'assets/images/google.svg')._gg._white(href="#") Sign up with Google Account
-                +divider('div')._text.__divider
-                  +e.text OR
-                +form-section._mg80
-                  +form-section-header._mg46
-                    +form-section-text Fill the form Below. Provide us All necessary information about you and you so We can create unique account for you.
-                  +grid.grid_big
-                    +col({xl: 6, md:12 })
-                      +form-section-wrapper
-                        +form-box('First name')
-                          +input(type="text" name="firstName" value="Eugene" placeholder="First name" required="required")
-                    +col({xl: 6, md:12 })
-                      +form-section-wrapper
-                        +form-box('Last name')
-                          +input(type="text" name="lastName" value="Sheeleen" placeholder="Last name" required="required")
-                +form-section._mg105
-                  +form-section-header._mg30
-                    +form-section-title Company details:
-                  +grid.grid_big
-                    +col({xl: 6, md:12 })
-                      +form-section-wrapper
-                        +form-box('Company name')
-                          +input(type="text" name="companyName" placeholder="Company name" required="required")
-                    +col({xl: 6, md:12 })
-                      +form-section-wrapper
-                        +form-box('Company Registry No.')
-                          +input(type="text" name="companyRegN" placeholder="Company Registry No." required="required")
-                    +col({xl: 6, md:12 })
-                      +form-section-wrapper
-                        +form-box('VAT number if you have it')
-                          +input(type="text" name="VATnumber" placeholder="VAT number if you have it")
-                    +col({xl: 6, md:12 })
-                      +form-section-wrapper
-                        +form-box('Legal adress city')
-                          +input(type="text" name="legalAdressCity" placeholder="Legal adress city" required="required")
-                    +col({xl: 6, md:12 })
-                      +form-section-wrapper
-                        +form-box('Legal adress street')
-                          +input(type="text" name="legalAdressStreet" placeholder="Legal adress street" required="required")
-                    +col({xl: 6, md:12 })
-                      +form-section-wrapper
-                        +form-box('Building No.')
-                          +input(type="text" name="buildingN" placeholder="Building No." required="required")
-                    +col({xl: 6, md:12 })
-                      +form-section-wrapper
-                        +form-box('Apartment or Office No.')
-                          +input(type="text" name="officeN" placeholder="Apartment or Office No.")
-                    +col({xl: 6, md:12 })
-                      +form-section-wrapper
-                        +form-box('ZIP/Postal Code')
-                          +input(type="text" name="ZIPcode" placeholder="ZIP/Postal Code" required="required")
-                +form-section
-                  +form-section-header._mg30
-                    +form-section-title Registration info:
-                  +grid.grid_big.grid_inner
-                    +col({xl: 6, md:12 })
-                      +form-section-wrapper
-                        +form-box('E-mail adress')
-                          +input(type="email" name="email" placeholder="E-mail adress" required="required" )
-                    +col({xl: 6, md:12 }).grid__col_md-order2
-                      +form-section-wrapper
-                        +checkbox('agreement', '1')._border I agree with Terms and Conditions
-                    +col({xl: 6, md:12 })
-                      +form-section-wrapper
-                        +form-box('Password')
-                          +input(type="password" name="password" placeholder="Password" data-parsley-equalto="[data-password4]" data-password3="password1" required="required")
-                    +col({xl: 6, md:12 }).grid__col_md-order2
-                      +form-section-wrapper
-                        +checkbox('subscribe', '1')._border Sign me up to Space Pool notification via E-mail
-                    +col({xl: 6, md:12 })
-                      +form-section-wrapper
-                        +form-box('Password one more time')
-                          +input(type="password" name="password" placeholder="Password one more time" data-parsley-equalto="[data-password3]" data-password4="password2" required="required")
-                    +col({xl: 6, md:12 }).grid__col_md-order2
-                      +form-section-wrapper
-                        +button('button')(type="submit")._wide._short Create my Space Pool account
+          +form()(data-validated-form)
+            +e.toggles
+              +b.LABEL.color-radio._full._dark._big.__toggle
+                +e.INPUT.input(name="userType", value="tenant", type="radio", checked, data-show-elements="details-checker", data-toggle-form)
+                +e.SPAN.content Sign up as a tenant
+              +b.LABEL.color-radio._full._dark._big.__toggle
+                +e.INPUT.input(name="userType", value="host", type="radio", data-hide-elements="details-checker",data-show-elements="details", data-toggle-form)
+                +e.SPAN.content Sign up as a host
+            +form-section('section')._socials
+              +form-section-header._mg14
+                +form-section-text Choose one of automatic options using social media:
+              +grid.grid_layout.grid_int10
+                +col({xl: 6, sm: 12})
+                  +social-button('fb-symbol')._fb._white(href="#") Sign up with Facebook
+                +col({xl: 6, sm: 12})
+                  +social-button('', 'assets/images/google.svg')._gg._white(href="#") Sign up with Google Account
+            +divider('div')._text.__divider
+              +e.text OR
+            +form-section._mg80
+              +form-section-header._mg49
+                +form-section-text Fill the form Below. Provide us All necessary information about you and you so We can create unique account for you.
+              +grid.grid_big
+                +col({xl: 6, md:12 })
+                  +form-section-wrapper
+                    +form-box('First name')
+                      +input(type="text" name="firstName" value="Eugene" placeholder="First name" required="required")
+                +col({xl: 6, md:12 })
+                  +form-section-wrapper
+                    +form-box('Last name')
+                      +input(type="text" name="lastName" value="Sheeleen" placeholder="Last name" required="required")
+            +form-section._mg80
+              +form-section-checker()._mgt-20(data-form-element="details-checker")
+                +b.LABEL.checkbox
+                  +e.INPUT.input(name="isCompaty" value="1" type="checkbox" data-checker="details")
+                  +e.SPAN.box
+                    +icon('check').__icon
+                  +e.SPAN.content I work under brand or company
+              +form-section-content.is-disabled(data-checker-target="details" data-form-element="details")
+                +form-section-header._mg35
+                  +form-section-title Company details:
+                +grid.grid_big
+                  +col({xl: 6, md:12 })
+                    +form-section-wrapper
+                      +form-box('Company name')
+                        +input(type="text" name="companyName" placeholder="Company name" required="required")
+                  +col({xl: 6, md:12 })
+                    +form-section-wrapper
+                      +form-box('Company Registry No.')
+                        +input(type="text" name="companyRegN" placeholder="Company Registry No." required="required")
+                  +col({xl: 6, md:12 })
+                    +form-section-wrapper
+                      +form-box('VAT number if you have it')
+                        +input(type="text" name="VATnumber" placeholder="VAT number if you have it")
+                  +col({xl: 6, md:12 })
+                    +form-section-wrapper
+                      +form-box('Legal adress city')
+                        +input(type="text" name="legalAdressCity" placeholder="Legal adress city" required="required")
+                  +col({xl: 6, md:12 })
+                    +form-section-wrapper
+                      +form-box('Legal adress street')
+                        +input(type="text" name="legalAdressStreet" placeholder="Legal adress street" required="required")
+                  +col({xl: 6, md:12 })
+                    +form-section-wrapper
+                      +form-box('Building No.')
+                        +input(type="text" name="buildingN" placeholder="Building No." required="required")
+                  +col({xl: 6, md:12 })
+                    +form-section-wrapper
+                      +form-box('Apartment or Office No.')
+                        +input(type="text" name="officeN" placeholder="Apartment or Office No.")
+                  +col({xl: 6, md:12 })
+                    +form-section-wrapper
+                      +form-box('ZIP/Postal Code')
+                        +input(type="text" name="ZIPcode" placeholder="ZIP/Postal Code" required="required")
+            +form-section
+              +form-section-header._mg35
+                +form-section-title Registration info:
+              +grid.grid_big.grid_inner
+                +col({xl: 6, md:12 })
+                  +form-section-wrapper
+                    +form-box('E-mail adress')
+                      +input(type="email" name="email" placeholder="E-mail adress" required="required")
+                +col({xl: 6, md:12 }).grid__col_md-order2
+                  +form-section-wrapper
+                    +checkbox('agreement', '1')._border I agree with Terms and Conditions
+                +col({xl: 6, md:12 })
+                  +form-section-wrapper
+                    +form-box('Password')
+                      +input(type="password" name="password" placeholder="Password"
+                      data-parsley-equalto="[data-password2]" data-password1="password1" required="required")
+                +col({xl: 6, md:12 }).grid__col_md-order2
+                  +form-section-wrapper
+                    +checkbox('subscribe', '1')._border Sign me up to Space Pool notification via E-mail
+                +col({xl: 6, md:12 })
+                  +form-section-wrapper
+                    +form-box('Password one more time')
+                      +input(type="password" name="password" placeholder="Password one more time" data-password2="password2"
+                      data-parsley-equalto="[data-password1]" required="required")
+                +col({xl: 6, md:12 }).grid__col_md-order2
+                  +form-section-wrapper
+                    +button('button')(type="submit")._wide._short Create my Space Pool account
         +col({ xl: 1, lg: 12}).hide-lg
 
 block panels
