footer and header special version

--- a/app/blocks/header-menu/header-menu.pug
+++ b/app/blocks/header-menu/header-menu.pug
@@ -8,3 +8,11 @@ mixin header-menu()
       +link(href="#") Sign Up
     +e.LI.item
       +link(href="#popup-signin").js-popup Sign In
+
+
+mixin header-menu-special()
+  +b.UL.header-menu&attributes(attributes)
+    +e.LI.item_bmg
+      +link.is-active(href="#") Spacepool for Guests
+    +e.LI.item
+      +link(href="#") Spacepool for space owners
