--- a/app/blocks/header-menu/header-menu.scss
+++ b/app/blocks/header-menu/header-menu.scss
@@ -17,6 +17,12 @@
       @include text-mid;
 
       font-weight: 700;
+
+      &.is-active {
+        color: $color-header-menu-active;
+        cursor: default;
+        pointer-events: none;
+      }
     }
   }
 }
