--- a/app/blocks/logo/logo.pug
+++ b/app/blocks/logo/logo.pug
@@ -25,3 +25,7 @@ mixin logo(tag)
 mixin logo-image(tag)
   +b(tag || 'a').logo&attributes(attributes)
     +e.IMG.icon(src="assets/images/logo.svg")
+
+mixin logo-image-short(tag)
+  +b(tag || 'a').logo&attributes(attributes)
+    +e.IMG.icon(src="assets/images/logo-short.svg")
