--- a/app/blocks/logo/logo.scss
+++ b/app/blocks/logo/logo.scss
@@ -62,4 +62,14 @@
       }
     }
   }
+
+  &_short {
+    width: 90px;
+    height: 103px;
+
+    @include screen('sm') {
+      width: 45px;
+      height: 52px;
+    }
+  }
 }
