--- a/app/components/footer/footer.pug
+++ b/app/components/footer/footer.pug
@@ -21,8 +21,9 @@ mixin footer()
 
 
 mixin footer-special()
-  +b.FOOTER.footer&attributes(attributes)
+  +b.FOOTER.footer_special&attributes(attributes)
     .container
       +e.top
         +e.logo
-          +logo-image._footer
+          +logo-image-short._short
+        +slogan.__slogan COMING SOON...
