--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -72,6 +72,7 @@ include ../blocks/panel/panel
 include ../blocks/payment-card/payment-card
 include ../blocks/popups/popups
 include ../blocks/price/price
+include ../blocks/promo-section/promo-section
 include ../blocks/put-block-into-slot/put-block-into-slot
 include ../blocks/rating/rating
 include ../blocks/request-info/request-info
@@ -83,6 +84,7 @@ include ../blocks/selectable-block/selectable-block
 include ../blocks/short-profile/short-profile
 include ../blocks/sidebar/sidebar
 include ../blocks/slider/slider
+include ../blocks/slogan/slogan
 include ../blocks/social-button/social-button
 include ../blocks/social/social
 include ../blocks/socials/socials
