--- a/app/pages/about-tenant/about-tenant.pug
+++ b/app/pages/about-tenant/about-tenant.pug
@@ -4,3 +4,8 @@ block head
   - var pageTitle = 'SpacePool - About Space Pool for Guests'
 
 block content
+
+
+block panels
+  +main-menu-special
+    +nav-list(getData('main-menu-special.json'))
