--- a/app/styles/helpers/_fonts.scss
+++ b/app/styles/helpers/_fonts.scss
@@ -1,6 +1,7 @@
 @font-face {
   font-family: 'ProximaNova';
   font-style: normal;
+  font-display: swap;
   font-weight: 100;
   src: url('../fonts/ProximaNovaTThin.eot');
   src:
@@ -15,6 +16,7 @@
 @font-face {
   font-family: 'ProximaNova';
   font-style: normal;
+  font-display: swap;
   font-weight: 300;
   src: url('../fonts/ProximaNovaLight.eot');
   src:
@@ -28,6 +30,7 @@
 @font-face {
   font-family: 'ProximaNova';
   font-style: normal;
+  font-display: swap;
   font-weight: 400;
   src: url('../fonts/ProximaNovaRegular.eot');
   src:
@@ -41,6 +44,7 @@
 @font-face {
   font-family: 'ProximaNova';
   font-style: normal;
+  font-display: swap;
   font-weight: 600;
   src: url('../fonts/ProximaNovaRegular.eot');
   src:
@@ -54,6 +58,7 @@
 @font-face {
   font-family: 'ProximaNova';
   font-style: normal;
+  font-display: swap;
   font-weight: 700;
   src: url('../fonts/ProximaNovaBold.eot');
   src:
@@ -67,6 +72,7 @@
 @font-face {
   font-family: 'ProximaNova';
   font-style: normal;
+  font-display: swap;
   font-weight: 800;
   src: url('../fonts/ProximaNovaExtrabld.eot');
   src:
