--- a/app/styles/helpers/_text-styles.scss
+++ b/app/styles/helpers/_text-styles.scss
@@ -108,6 +108,12 @@
   letter-spacing: -.02em;
 }
 
+@mixin text10 {
+  font-size: 10px;
+  line-height: (26/10);
+  letter-spacing: -.02em;
+}
+
 @mixin text9 {
   font-size: 9px;
   line-height: (26/9);
@@ -116,4 +122,8 @@
 
 @mixin ls {
   letter-spacing: -.02em;
+}
+
+@mixin ls-plus {
+  letter-spacing: .02em;
 }
