--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -118,6 +118,10 @@ $color-calendar-days: #b6bcc4;
 $color-calendar-active-day: #252b33;
 $color-calendar-disabled-arrow: #b4bac2;
 $color-icon-gray-another: #333;
+$color-landing-subtitles: #31e1c9;
+$color-slider-dot: #58e4cf;
+$color-landing-mask: rgba(10, 33, 32, .35);
+$color-header-menu-active: #8d99a7;
 
 // ##########
 // Transitions
